--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,15 +17,16 @@
     {% block body %}
     "AF"
     {% endblock %}
-        
+    
+    {% include "footer/footer.html.twig" %}
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script src="{{ asset('js/script.js') }}"></script>
         <script src="https://unpkg.com/feather-icons"</script>
         <script>
             feather.replace()
         </script>
-
-        {% block javascripts %}{% endblock %}
+            {% block javascripts %}{% endblock %}
     </body>
 </html>
 
