--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -1,25 +1,22 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}Mot de passe oublié | {{ parent() }} {% endblock %}
+
+{% block h1 %}Mot de passe oublié{% endblock %}
 
 {% block body %}
     {% for flash_error in app.flashes('reset_password_error') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
 
-    <h1>Réinitialiser son mon de passe</h1>
-
-
-    {{ form_start(requestForm) }}
-        {{ form_row(requestForm.email) }}
-        <div>
-            <small>
-
-                Entrez votre adresse e-mail.
-
-            </small>
-        </div>
-
-        <button class="btn btn-primary">Send password reset email</button>
-    {{ form_end(requestForm) }}
+    <div class="col-5 mt-5 mx-auto text-center">
+        {{ form_start(requestForm) }}
+            {{ form_row(requestForm.email) }}
+            <div class="d-flex flex-column text-center ">
+            <label class=" my-3" for="">Recevoir un mail pour réinitialiser votre mot de passe :</label>
+            <br>
+            <button class="btn btn-primary mx-auto col-3">Envoyer</button>
+            </div>
+        {{ form_end(requestForm) }}
+    </div>
 {% endblock %}
