--- a/templates/admin_products/index.html.twig
+++ b/templates/admin_products/index.html.twig
@@ -45,6 +45,7 @@
                 <th>Nom</th>
                 <th>Pays</th>
                 <th>Prix</th>
+                <th>Stock</th>
                 <th>Description</th>
                 <th>ABV</th>
                 <th>EBC</th>
@@ -63,6 +64,7 @@
                 <td>{{ product.name|upper }}</td>
                 <td><p title="{{ product.brewries.countries.name }}">{{ product.brewries.countries.flag }}</p></td>
                 <td>{{ product.price|number_format(2) }}</td>
+                <td>{{ product.stocks.quantity}}</td>
                 <td>{% if product.description|length > 100 %}
                     {{ product.description|slice(0,100) }}...
                 {% else %}
@@ -74,12 +76,19 @@
                 <td>{{ product.glutenfree }}</td>
                 <td>{{ product.organic }}</td>
                 <td>{{ product.createdAt ? product.createdAt|date("F d Y 🕐 h:i") }}</td>
-                <td>
-                    <div class="form-check form-switch d-flex justify-content-center">
-                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>
+                {# <td> #}
+                    {# <div class="form-check form-switch d-flex justify-content-center">
+                        <input class="form-check-input pasteque" type="checkbox" role="switch" id="flexSwitchCheckChecked" {% if product.status %} checked {% endif %} value="{{product.id}}">
+                        <label class="form-check-label" for="flexSwitchCheckChecked"></label>
+                    </div> #}
+                    <td class="text-center">
+                    <div class="form-check form-switch ">
+                        <input class="form-check-input pasteque mx-auto" type="checkbox" role="switch" id="flexSwitchCheckChecked" {% if product.status %} checked {% endif %} value="{{ product.id }}"value="{{ product.id }}">
+                        
                         <label class="form-check-label" for="flexSwitchCheckChecked"></label>
                     </div>
                 </td>
+                {# </td> #}
                 <td>
                     <a href="{{ path('app_admin_products_show', {'id': product.id}) }}"><i class="fa-solid fa-eye text-info"></i></a>
                 </td>
@@ -100,4 +109,41 @@
     </div>
 
     <a class="btn btn-success mt-3 ms-5" href="{{ path('app_admin_products_new') }}">Ajouter une Bière</a>
+{% endblock %}
+
+
+{% block javascripts %}
+    <script>
+        let pasteque = $('.pasteque');
+        console.log(pasteque);
+
+        pasteque.change(function(){
+            console.log('test');
+        
+        let banane = {
+            "id" : $(this).val()
+        };
+
+        console.log(banane);
+
+        // Préparation de l'envoi
+        $.ajax({
+            method : 'post',
+            dataType : "json", //format json
+            url : "{{path('change_status_product')}}", // route à créer dans le controller
+            data : banane, //= données récupérées
+
+            // Réponse (retour) du controller
+            success : function (response){
+                console.log(response);
+            }, 
+            error: function(){
+                alert("error")
+            }
+            
+            });
+        });
+
+    </script>
+
 {% endblock %}
