--- a/templates/profil/edit.html.twig
+++ b/templates/profil/edit.html.twig
@@ -16,6 +16,8 @@
             {{ form_row(formProfil.info)}}
             {{ form_row(formProfil.plainPassword)}}
             {{ form_row(formProfil.avatarUpdate)}}
+                
+            
         
             <div class="d-flex justify-content-center">
                 <input type="submit" value="Modifier" class="btn btn-warning col-md-2 mt-3">
@@ -24,7 +26,7 @@
             <div id="zone" class="d-flex mt-2 m-auto image_preview  text-center justify-content-center col-md-2 img-thumbnail">
                 {% if users.avatar %}
                     <img class="img-fluid img-thumbnail" src="{{ asset('img/upload/' ~ users.avatar)}}" alt="">
-                    <td><a href="{{ path("picture_delete", {'id': users.id} ) }}"><i class="delete-icon" data-feather="trash" title="supprimer"></i></a></td>
+                    <a href="{{ path("picture_delete", {'id': users.id} ) }}"><i class="delete-icon" data-feather="trash" title="supprimer"></i></a>
                 {% endif %}
             </div>
         {{ form_end(formProfil)}}
@@ -41,5 +43,24 @@
     </div>
 
     
+
+{% endblock %}
+
+
+{% block javascripts %}
+
+<script>
+    function loadFile(event){
+
+        let zone = document.getElementById("zone");
+        zone.innerHTML="";
+        
+        let image = document.createElement('img');
+        image.setAttribute("src", URL.createObjectURL(event.target.files[0]));
+        image.setAttribute("class", "image_ajout_preview");
+
+        zone.append(image);
+    }
+</script>
 
 {% endblock %}
