--- a/templates/admin_styles/_delete_form.html.twig
+++ b/templates/admin_styles/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_admin_styles_delete', {'id': style.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ style.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger">Supprimer le style</button>
 </form>
