--- a/templates/admin_styles/new.html.twig
+++ b/templates/admin_styles/new.html.twig
@@ -1,11 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Styles{% endblock %}
+{% block title %}Ajouter un style | {{ parent() }} {% endblock %}
+
+{% block h1 %}Ajouter un style{% endblock %}
 
 {% block body %}
-    <h1>Create new Styles</h1>
+    
+    <a class="btn btn-secondary ms-3" href="{{ path('app_admin_styles_index') }}">Retour</a>
+
+    <div class="col-md-8 m-auto">
 
     {{ include('admin_styles/_form.html.twig') }}
 
-    <a href="{{ path('app_admin_styles_index') }}">back to list</a>
+    </div>
+
 {% endblock %}
