--- a/templates/products/catalogue.html.twig
+++ b/templates/products/catalogue.html.twig
@@ -29,16 +29,17 @@
     {{ form_end(formFilter) }}
     </div>
 
-    <div class="row all-catalogue-container justify-content-center col-md-9">
+    <div class="row all-catalogue-container justify-content-center col-md-10">
         {% for product in products %}
-            <div class="col-md-3 product-card-container m-4" href="{{ path("fiche_produit", {'id': product.id} ) }}">
+            <div class="col-md-3 product-card-container m-3" href="{{ path("fiche_produit", {'id': product.id} ) }}">
                 <div class="top-card">
                     <a class="link-deco" href="{{  path("fiche_produit", {'id': product.id} )  }}" ><h5 class="text-center catalogue-product-title">{{ product.name|capitalize }}</h5></a>
-                    <h6 class="product-styles mt-2 text-center catalogue-product-styles" > 🍻 {{ product.brewries.name }} - {{ product.styles.name }}</h6>
+                    <h6 class="product-styles text-center" > 🍻 {{ product.brewries.name }} - {{ product.styles.name }}</h6>
                 </div>
-                <div class="text-center">
+                
+                <div class="text-center py-2">
                     {% if product.picture %}
-                        <a href="{{  path("fiche_produit", {'id': product.id} )  }}"><img src="{{ asset('img/upload/' ~ product.picture) }}" alt="" class="img150"></a>
+                        <a href="{{  path("fiche_produit", {'id': product.id} )  }}"><img src="{{ asset('img/upload/' ~ product.picture) }}" alt="" class="imgcatalogue"></a>
                     {% else %}
                         <img src="{{ asset('img/beer-default.png')}}" alt="" class="img150">
                     {% endif %}
