--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,13 @@
+/* POLICES */
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800;900&display=swap');
+
 *{
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
-
 
 
 /* LOGIN & REGISTER FORMS         DEBUT  */
