--- a/public/css/style.css
+++ b/public/css/style.css
@@ -121,23 +121,7 @@
 /* NAVBAR  -  FIN  */
 
 
-
-/* BACKGROUND - DEBUT */
-
-.bck{
-    background-image: url("../img/bck1.jpg");
-    background-position: center center;
-    background-size: cover;
-    height: 100vh;
-    margin-top: -18px;
-}
-
-/* BACKGROUND - FIN */
-
-
-
 /*   ACCUEIL - DEBUT  */
-
 
 .carousel-container{
     display: flex;
@@ -149,6 +133,7 @@
     min-width: 380px;
     border-radius: 10px;
     margin: auto;
+    background-color: white;
 }
 
 .card-container{
@@ -265,7 +250,6 @@
     font-size: 0.8em;
 }
 
-
 .btn-sendtocart{
     background-color: rgba(255, 213, 0, 0.37);
     border-radius: 8px;
@@ -291,12 +275,32 @@
 
 /*  CATALOGUE - FIN */
 
+/*   FICHE PRODUIT - DEBUT   */
+
+#fiche_produit_container{
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 8px;
+    overflow: hidden;
+    position: relative;
+}
+
+.rupture{
+    font-weight: 800;
+    font-size: 4em;
+    color: red;
+    transform: rotate(10deg);
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 300px;
+    -webkit-text-stroke: 2px rgb(0, 0, 0);
+}
+/*   FICHE PRODUIT - FIN    */
 
 /*  RESET PASSWORD - DEBUT */
-
-
-
 /*  RESET PASSWORD - FIN */
+
+
 
 /* AVATAR */
 .img80{
@@ -345,12 +349,10 @@
 .cookies_btn{
     display:flex;
     justify-content: center;
+    justify-content: space-around;
+    align-items: center;
 }
-.btn_size{
-    width: 40%;
-    height: 40px;
-    margin: 20px;
-}
+
 .cookies_text_query_2{
     display: none;
 }
@@ -372,12 +374,10 @@
     width: 100%;
     height: 100%;
     z-index: 2;
-   
 }
 .btn-age-container{
     display: flex;
     justify-content: space-around;
-
 }
 .age-btn > button{
     width: 100px;
@@ -505,13 +505,13 @@ iframe{
 
 /* MEDIA QUERIES */
 
-@media screen and (max-width: 1500px) {
+@media only screen and (max-width: 1500px) {
     .Localisation{
         display: none;
     }
 }
 
-@media screen and (max-width: 800px) {
+@media only screen and (max-width: 800px) {
 
     #legal_age{
         display: flex;
@@ -520,6 +520,7 @@ iframe{
         align-items: center;
         height: 300px;
         z-index: 3;
+        background-image: none;
     }
 
     .btn-age-container{
@@ -538,7 +539,7 @@ iframe{
     }
 }
 
-@media screen and (min-width: 200px) and (max-width: 1000px) {
+@media only screen and (min-width: 200px) and (max-width: 1000px) {
     
     #connexion_btn_zone{
         margin-top: 10px;
