--- a/templates/footer/footer.html.twig
+++ b/templates/footer/footer.html.twig
@@ -13,6 +13,7 @@
                         Conditions générales de vente
                     </a>
                 </li>
+                
         </ul>
     </section>
 
@@ -20,7 +21,8 @@
     <section id="block_contact_infos text-center" class="footer-block">
     <h4 class="footer-titles">Contact</h4>
     <ul class="toggle-footer" style="">
-        <li>
+    <li><a href="{{path('app_contact')}}">Nous contacter</a></li>
+        {# <li>
             Une Petite Mousse
             <br>
             8 Avenue de la Boustifaille <br>
@@ -35,9 +37,9 @@
             </li>
             <li>
                 E-mail :<br>
-                <a href="#">info@unepetitemousse.com</a>
+                <a href="mailto:contact@unepetitemousse.fr">contact@unepetitemousse.fr</a>
             </li>
-        </li>
+        </li> #}
     </ul>
     </section>
 
