Ajout des commentaires

--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -5,10 +5,10 @@
 {% block body %}
 
 <!--Section: Contact v.2-->
-<section class="mb-4 col-md-10 m-auto">
+<section class="mb-4 col-md-10 m-auto shadow">
 
     <!--Section heading-->
-    <h2 class="h1-responsive font-weight-bold text-center my-4">Nous contacter</h2>
+    <h2 class="h1-responsive font-weight-bold text-center my-4 py-3">Nous contacter</h2>
     <!--Section description-->
     <p class="text-center w-responsive mx-auto mb-5">Vous avez des questions? N'hésitez pas à nous contacter directement. Notre équipe se fera un plaisir de vous aider rapidement !</p>
 
