--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -54,7 +54,7 @@
   <div id="connexion_btn_zone">
     {% if not app.user  %}
       <div class="register_button">
-        <a class="nav-link active" aria-current="page" href="{{ path('app_register') }}">Inscription</a>
+        <a class="nav-link active me-3" aria-current="page" href="{{ path('app_register') }}">Inscription</a>
       </div>
     {% endif %}
     {% if not app.user  %}
