--- a/templates/products/fiche_produit.html.twig
+++ b/templates/products/fiche_produit.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
 
-     {# Flash d'ajout au PANIER #}
+    {# Flash d'ajout au PANIER #}
     {% for notification in app.flashes('basket') %}
 
     <div class="col-md-6 mx-auto alert alert-success text-center">
@@ -80,10 +80,10 @@
                     <th>Description</th>
                     <td class="p-3">{{ product.description }}</td>
                 </tr>
-                <tr>
+                {# <tr>
                     <th>Date d'ajout</th>
                     <td>{{ product.createdAt ? product.createdAt|date('Y-m-d 🕐 H:i:s') : '' }}</td>
-                </tr>
+                </tr> #}
                 <tr>
                     <th>Titre alcoolique</th>
                     <td>{{ product.abv }}% VOL</td>
@@ -102,8 +102,8 @@
                 </tr>
             </tbody>
         </table>
-
         
+        {# EDIT/VALIDAE BUTTON #}
         {% if app.user %}
             {% if is_granted("ROLE_ADMIN") %}
                 <a class="btn btn-warning  mt-3" href="{{ path('app_admin_products_edit', {'id': product.id}) }}">Modifier</a>
@@ -115,5 +115,52 @@
     </div>
 </div>
 
+        {# COMMENTS FORM #}
+    <div class="text-center col-8 m-auto mt-5 mb-5 mb-3">
+    {% if app.user %}
+
+        {{ form_start(commentsForm) }}
+
+            {{form_row(commentsForm.rating)}}
+
+            {{ form_row(commentsForm.message) }}
+
+        <input type="submit" value="Envoyer" class="btn btn-success col-md-2 mt-3">
+        {{ form_end(commentsForm) }}
+
+    {% else %}
+        <h4>Veuillez vous <a href="{{ path('app_login')}}">connecter</a> pour laisser un message !</h4>
+    {% endif %}
+    </div>
+
+    {# COMMENTS DISPLAY #}
+    <div class="col-md-10 mt-3 mx-auto pt-2 shadow">
+        <table class="table table-striped border-warning">
+            {% if messages %}
+                <thead>
+                    <tr>
+                        <th>Pseudo</th>
+                        <th>Commentaires</th>
+                        <th>Note</th>
+                        <th>Date</th>
+                    </tr>
+            {% endif %}
+            </thead>
+            <tbody>
+        {% for comment in messages %}
+                <tr>
+                    <td class="py-3 fw-bold">{{comment.users.pseudo|upper}}</td>
+                    <td class="py-3">{{comment.message}}</td>
+                    <td class="py-3">{{comment.rating}} / 5</td>
+                    <td class="py-3">{{comment.createdAt|date("F d Y 🕐 h:i")}}</td>
+                </tr>
+        {% else %}
+            {% if app.user %}
+            <p class="m-auto mt-5 text-center">Soyez le premier à laisser un commentaire !</p>
+            {% endif %}
+        {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
 {% endblock %}
