--- a/templates/admin_stocks/index.html.twig
+++ b/templates/admin_stocks/index.html.twig
@@ -51,12 +51,12 @@
                 </tr>
             {% else %}
                 <tr>
-                    <td colspan="4">no records found</td>
+                    <td colspan="4">Pas d'informations</td>
                 </tr>
             {% endfor %}
             </tbody>
         </table>
-        <input type="submit" class="stockBtn btn btn-success col-md-3 mt-3" value="Ajouter">
+        <input type="submit" class="stockBtn mx-auto my-3 btn btn-success col-md-3 mt-3" value="Ajouter">
     </div>
 
 {% endblock %}
