--- a/templates/admin_stocks/edit.html.twig
+++ b/templates/admin_stocks/edit.html.twig
@@ -3,11 +3,11 @@
 {% block title %}Edit Stocks{% endblock %}
 
 {% block body %}
-    <h1>Edit Stocks</h1>
+    <a class="btn btn-secondary ms-3" href="{{ path('app_admin_stocks_index') }}">Retour</a>
 
     {{ include('admin_stocks/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_admin_stocks_index') }}">back to list</a>
+    
 
     {{ include('admin_stocks/_delete_form.html.twig') }}
 {% endblock %}
