--- a/templates/products/fiche_produit.html.twig
+++ b/templates/products/fiche_produit.html.twig
@@ -18,40 +18,40 @@
     <a class="btn btn-dark mt-3 ms-5" href="{{ path('catalogue') }}">Catalogue</a>
 
     <div class="col-md-8 mx-auto text-center m-4 py-5" id="fiche_produit_container">
-
-    {% if product.stocks.quantity > 0 %}
-        <form action="{{ path("basket_add")}}" method="post">
-
-            <select name="quantity" class="form-control">
-
-
-                {% if product.stocks.quantity > 10 %}
-                    {% set quantity = 10 %}
-                {% else %}
-                    {% set quantity = product.stocks.quantity %}
-                {% endif %}
-
-
-                {% for i in 1..quantity %}
-                    <option value="{{i}}">{{i}}</option>
-                {% endfor %}
-            </select>
-
-            <input type="hidden" name="product" value="{{product.id}}">
-
-            <input type="submit" value="Ajouter au panier" class="btn btn-success">
-
-        </form>
-        
-
-            {% else %}
-                <h1 class="rupture">RUPTURE</h1>
-            {% endif %}
-        
+            
             {% if product.picture %}
                 <img src="{{ asset('img/upload/' ~ product.picture) }}" alt="" class="img300">
             {% else %}
                 <img src="{{ asset('img/beer-default.jpg') }}" alt="Bière introuvable" class="img300">
+            {% endif %}
+
+            {% if product.stocks.quantity > 0 %}
+        <div class="d-flex flex-column col-md-4 mx-auto justify-content-center align-items-center">
+            <form action="{{ path("basket_add")}}" method="post">
+
+                <input type="hidden" name="product" value="{{product.id}}">
+
+                <input type="submit" class="btn-s btn-sendtocart" value="Ajouter au panier" class="btn btn-success">
+
+                <select class="my-3" name="quantity" class="form-control">
+                    {% if product.stocks.quantity > 10 %}
+                        {% set quantity = 10 %}
+                    {% else %}
+                        {% set quantity = product.stocks.quantity %}
+                    {% endif %}
+
+
+                    {% for i in 1..quantity %}
+                        <option value="{{i}}">{{i}}</option>
+                    {% endfor %}
+                </select>
+
+            </form>
+        </div>
+        
+
+            {% else %}
+                <h1 class="rupture">RUPTURE</h1>
             {% endif %}
   
     <div class="col-md-7 mt-3 m-auto">
