--- a/templates/profil/edit.html.twig
+++ b/templates/profil/edit.html.twig
@@ -9,6 +9,10 @@
     <a class="btn btn-secondary ms-3" href="{{ path('app_profil') }}">Retour</a>
 
     <div class="col-md-8 m-auto">
+
+        <button class="btn btn-danger col-md-2 my-3" href="{{ path('app_reset_password', {'id': users.id})}}">Modifier Mot de passe</button>
+        
+
         {{ form_start(formProfil)}}
             {# {{ form_row(formProfil.pseudo)}} #}
             {# {{ form_row(formProfil.email)}} #}
@@ -18,8 +22,6 @@
             {{ form_row(formProfil.info)}}
             {{ form_row(formProfil.avatarUpdate)}}
                 
-            <button class="btn btn-danger col-md-2 mt-3"><a href="{{ path('password_edit', {'id': users.id})}}">Modifier Mot de passe</a></button>
-        
             <div class="d-flex justify-content-center">
                 <input type="submit" value="Modifier" class="btn btn-warning col-md-2 mt-3">
             </div>
@@ -33,6 +35,8 @@
     </div>
             </div>
         {{ form_end(formProfil)}}
+
+
 
         {# {{ form_start(formMDP)}}
                 {{ form_row(formMDP.plainPassword)}}
