--- a/templates/basket/index.html.twig
+++ b/templates/basket/index.html.twig
@@ -26,7 +26,7 @@
                 {% set size = basket.id|length -1 %}
 
                 {% for i in 0..size %}
-                    <tr>
+                    <tr id="tr{{ basket.id[i]}}">
                         {# <td>{{ basket.id[i] }}</td> #}
                         <td>
                             {% if basket.image[i] %}
@@ -41,25 +41,29 @@
 
 
                         <td>
-                            <span class="quantityChange" data-value="{{ basket.id[i] }}" data-what="moins">-</span>
-                            <span id="newQuantity">{{ basket.quantity[i] }}</span>
-                            <span class="quantityChange" data-value="{{ basket.id[i] }}" data-what="plus">+</span>
+                        {% if basket.quantity[i] > 0 %}
+                            
+                            <span class="quantityChange" id="moins{{ basket.id[i] }}" data-value="{{ basket.id[i] }}" data-what="moins">-</span>
+
+                            <span id="newQuantity{{ basket.id[i] }}">{{ basket.quantity[i] }}</span>
+
+                            <span class="quantityChange" id="plus{{ basket.id[i] }}" data-value="{{ basket.id[i] }}" data-what="plus">+</span>
+                        {% else %}
+                            <h2 class="text-warning">LE PRODUIT EST INDISPONIBLE</h2>
+                        {% endif %}
                         </td>
 
 
-
-
-
-                        <td id="montant">{{ basket.price[i] * basket.quantity[i]}}</td>
+                        <td id="montant{{ basket.id[i] }}">{{ basket.price[i] * basket.quantity[i]}}</td>
                         <td>
-                            <a href="{{ path('basket_remove', {"id" : basket.id[i]})}}">
+                            <a href="{{ path('basket_remove', {"id" : basket.id[i]} ) }}">
                                 <i class="fa fa-trash text-danger"></i></a>
                             </a>
                         </td>
                     </tr>
                 {% endfor %}
 
-                <tr>
+                <tr class="text-dark">
                     <td colspan="4">Total</td>
                     <td id="montantTotal">{{ montant }}€</td>
                     <td></td>
@@ -69,7 +73,12 @@
 
         <div class="row justify-content-between">
             <a class="btn btn-danger col-md-3 ms-3" href="{{ path("basket_remove_all") }}">Vider le panier</a>
-            <a class="btn btn-success col-md-3 me-3" href="">Payer</a>
+
+            {% if app.user %}
+                <a class="btn btn-success col-md-3 me-3" href="{{ path("basket_paiement")}}">Payer</a>
+            {% else %}
+                <h4 class="col-md-3 me-3">Veuillez vous connecter pour payer</h4>
+            {% endif %}
         </div>
 
     {% else %}
@@ -79,13 +88,50 @@
 
 
 {% block javascripts %}
+
+
     <script>
+        let basket = JSON.parse('{{ basket | json_encode | raw}}');
+
+        let array = [];
+        let countArray = basket['title'].length;
+
+        for(let i = 0; i < countArray; i++)
+        {
+            let test = {
+                "id" : basket['id'][i],
+                "quantity" : basket['quantity'][i],
+            }
+
+            array.push(test);
+        }
+
+        $.ajax({
+            method : 'post',
+            dataType : "json", 
+            url : "{{path('verification')}}", 
+            data : array,
+
+            success : function (response){
+                console.log(response);
+
+                
+                
+            }, 
+            error: function(){
+                alert("error")
+            }
+            
+            });
+
+
+        
         let quantityChange = $('.quantityChange');
-        let newQuantity = $('#newQuantity');
-        let montant = $('#montant');
         let montantTotal = $('#montantTotal');
 
         quantityChange.click(function(){
+        
+        let idProduct = $(this).data('value');
         
         let banane = {
             "id" : $(this).data('value'),
@@ -104,17 +150,36 @@
             // Réponse (retour) du controller
             success : function (response){
                 console.log(response);
-                if(response)
+
+                let newQuantity = $('#newQuantity' + idProduct);
+                let iconePlus = $('#plus' + idProduct);
+                let montant = $('#montant' + idProduct);
+
+                newQuantity.html(response['value']);
+                montant.html(response['montant']);
+                montantTotal.html(response['montantTotal'] + "€");
+
+                if(response['value'] == 1)
                 {
-                    newQuantity.html(response['value']);
-                    montant.html(response['montant']);
-                    montantTotal.html(response['montantTotal']);
+
+                    let iconeMoins = $('#moins' + idProduct);
+                    iconeMoins.hide();
+                }
+                else if(response['value'] > 1)
+                {
+                    let iconeMoins = $('#moins' + idProduct);
+                    iconeMoins.show();
+                }
+
+                if(response['max'])
+                {
+                    iconePlus.hide();
                 }
                 else
                 {
-                    let trDelete = $('#tr' + $(this).data('value'));
-                    trDelete.remove();
+                    iconePlus.show();
                 }
+                
             }, 
             error: function(){
                 alert("error")
