--- a/templates/products/fiche_produit.html.twig
+++ b/templates/products/fiche_produit.html.twig
@@ -26,14 +26,14 @@
             {% endif %}
 
             {% if product.stocks.quantity > 0 %}
-        <div class="d-flex flex-column col-md-4 mx-auto justify-content-center align-items-center">
+        <div class="d-flex flex-column col-md-4 mt-3 mx-auto justify-content-center align-items-center">
             <form action="{{ path("basket_add")}}" method="post">
 
                 <input type="hidden" name="product" value="{{product.id}}">
 
                 <input type="submit" class="btn-s btn-sendtocart" value="Ajouter au panier" class="btn btn-success">
 
-                <select class="my-3" name="quantity" class="form-control">
+                <select class=" ms-2" name="quantity" class="form-control">
                     {% if product.stocks.quantity > 10 %}
                         {% set quantity = 10 %}
                     {% else %}
@@ -106,7 +106,7 @@
         {# EDIT/VALIDAE BUTTON #}
         {% if app.user %}
             {% if is_granted("ROLE_ADMIN") %}
-                <a class="btn btn-warning  mt-3" href="{{ path('app_admin_products_edit', {'id': product.id}) }}">Modifier</a>
+                <a class="btn btn-warning mt-3" href="{{ path('app_admin_products_edit', {'id': product.id}) }}">Modifier</a>
             {% endif %}
         {% else %}
             <input class="btn-s btn-sendtocart mt-3" type="submit" value="Ajouter au panier" >
