--- a/templates/products/catalogue.html.twig
+++ b/templates/products/catalogue.html.twig
@@ -55,7 +55,26 @@
                 </div>
                 <a href="{{ path('basket_add', {'id': product.id}) }}">
                 
-                <input class="btn-s btn-sendtocart" type="submit" value="Ajouter au panier"></a>
+                <form action="{{ path("basket_add")}}" method="post">
+
+                    <input type="hidden" name="product" value="{{product.id}}">
+
+                    <input type="submit" class="btn-s btn-sendtocart" value="Ajouter au panier" class="btn btn-success">
+
+                    <select hidden="hidden" class="my-3" name="quantity" class="form-control">
+                        {% if product.stocks.quantity > 10 %}
+                            {% set quantity = 10 %}
+                        {% else %}
+                            {% set quantity = product.stocks.quantity %}
+                        {% endif %}
+
+
+                        {% for i in 1..quantity %}
+                            <option value="{{i}}">{{i}}</option>
+                        {% endfor %}
+                    </select>
+
+                </form>
 
                 <div class=" d-flex card-bottom justify-content-between">
                 <a class="link-deco voir-eye" href="{{  path("fiche_produit", {'id': product.id} )  }}">👁️</a>
